--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/camera": "^4.14.0",
     "@ionic-native/core": "~4.12.0",
+    "@ionic-native/file": "^4.14.0",
     "@ionic-native/geolocation": "^4.14.0",
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "~4.12.0",
     "@ionic/storage": "2.1.3",
     "cordova-plugin-camera": "^4.0.3",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-sqlite-storage": "^2.4.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -43,7 +46,9 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-geolocation": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file": {},
+      "cordova-sqlite-storage": {}
     }
   }
 }
